# CloudNote

./: .breakpoints  db_handler.py  main.py  processor.py  pyproject.toml  this.py
subjects/: 10.json  11.json  7.json  8.json  general.json  test.json
templates/: base.html  creation.html  notes.html  search.html  unusedhtml(base)
